--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,4 +15,8 @@
   <a routerLink="/comments/list">Fetch Comments List</a>
 
   <a routerLink="/">Home</a>
+
+  <p style="color: #11006e">
+    {{ currentTime | date: "mediumTime" }}
+  </p>
 </div>
